Add 2nd atelier

--- a/actu.html
+++ b/actu.html
@@ -264,8 +264,8 @@
               </h4>
               Ces réunions, qui ont pour but d'échanger avec les citoyens sur leurs attentes et sur les pistes d'actions à mettre en place, se tiendront à la <b><a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a></b> :
               <ul>
-                <li><b>Jeudi 16 novembre (18h30-20h30)</b>: 2ème atelier consacré au nuisances aériennes</li> 
-                <li>Mardi 12 décembre (18h30-20h30)</li>
+                <li>Jeudi 16 novembre (18h30-20h30): 2ème atelier, consacré au bruit aérien</li> 
+                <li><b>Mardi 12 décembre (18h30-20h30)</b> : 3ème atelier, consacré au bruit aérien</li>
               </ul>
 
             </div>
@@ -283,7 +283,7 @@
               <ul>
                 <li><b>Vendredi 03 novembre (06h00-08h00)</b> : Mesurez depuis chez vous *</li>
                 <li><b>Mardi 07 novembre (18h30-19h30)</b> : Mesurez depuis chez vous *</li>
-                <li>Samedi 02 décembre (10h30-11h30) : <i>Le lieu sera défini sous peu</i></li>
+                
               </ul>
               * Pour en savoir plus, consultez <b><a href="./resultats/sonoreze_II/actions.html">cette page</a></b>.
               
@@ -333,7 +333,29 @@
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
-              <a href="https://x.com/Noise_Planet/status/1711311167564427763?s=20" target="_blank">
+              <a href="./resultats/sonoreze_II/actions.html">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/Atelier_2023_11_16.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                2ème Atelier "Diagnostic / actions"
+              </h5>
+              <p>
+                16/11/2023 à 18h30 - MDD
+              </p>
+              <a href="./resultats/sonoreze_II/actions.html" class="text-info icon-move-right">Lire le compte-rendu
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="./resultats/sonoreze_II/actions.html">
                 <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/Atelier_2023_10_12.png">
               </a>
             </div>
@@ -344,7 +366,7 @@
               <p>
                 12/10/2023 à 18h30 - MDD
               </p>
-              <a href="https://x.com/Noise_Planet/status/1711311167564427763?s=20" target="_blank" class="text-info icon-move-right">Lire l'annonce
+              <a href="./resultats/sonoreze_II/actions.html" class="text-info icon-move-right">Lire le compte-rendu
                 <i class="fas fa-arrow-right text-sm"></i>
               </a>
             </div>
@@ -393,6 +415,12 @@
           </div>
         </div>
 
+      </div><!-- row -->
+
+    <br>
+
+      <div class="row">
+
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
@@ -413,12 +441,6 @@
             </div>
           </div>
         </div>
-
-      </div><!-- row -->
-
-    <br>
-
-      <div class="row">
 
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
@@ -462,27 +484,6 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
-          <div class="card card-plain card-blog">
-            <div class="card-image border-radius-lg position-relative">
-              <a href="https://twitter.com/Noise_Planet/status/1662084234427736064?s=20" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/NoiseCapture_party_2023_06_01.png">
-              </a>
-            </div>
-            <div class="card-body px-0">
-              <h5>
-                NoiseCapture party - secteur Mairie
-              </h5>
-              <p>
-                01/06/2023 à 18h30
-              </p>
-              <a href="https://twitter.com/Noise_Planet/status/1662084234427736064?s=20" target="_blank" class="text-info icon-move-right">Lire l'annonce
-                <i class="fas fa-arrow-right text-sm"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
         <div class="col-lg-3 col-md-12 col-12">
           <div class="card card-blog card-background">
             <div class="full-background" style="background-image: url('./assets/img/actu/2023_02_09_ANR_resultat.png')"></div>
@@ -508,7 +509,26 @@
       <div class="row">
 
 
-
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://twitter.com/Noise_Planet/status/1662084234427736064?s=20" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/NoiseCapture_party_2023_06_01.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                NoiseCapture party - secteur Mairie
+              </h5>
+              <p>
+                01/06/2023 à 18h30
+              </p>
+              <a href="https://twitter.com/Noise_Planet/status/1662084234427736064?s=20" target="_blank" class="text-info icon-move-right">Lire l'annonce
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
