--- a/resultats/sonoreze_II/actions.html
+++ b/resultats/sonoreze_II/actions.html
@@ -263,7 +263,7 @@
 
 
 
-  <!-- Container Articles scientifiques -->
+  <!-- Container Atelier n°1 -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
@@ -303,7 +303,7 @@
                  Il a également été convenu que d'autres thématiques (comme le bruit du périphérique, ...) seront traitées ultérieurement.
                  <br>
                  <br>
-                 Pour plus de détail, vous êtes invité à lire le <b>compte-rendu</b> disponible ci-dessous.
+                 Pour plus de détail, vous êtes invité à lire le <b>compte-rendu</b> détaillé, disponible ci-dessous.
               </p>
               <a href="https://github.com/Universite-Gustave-Eiffel/sonoreze/tree/gh-pages/assets/data/actions/ATELIER_1_CR_2023_10_12.pdf" target="_blank"><img src="../../assets/img/actions/lire_cr_2023_10_12.png" alt="Lire le compte-rendu" width="80%"></a>
             </div><!-- row -->
@@ -352,7 +352,64 @@
   </div><!-- container -->
 
 
+  <!-- Container Atelier n°2 -->
+  <div class="container mt-sm-5 mt-3">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
+          <h3>Atelier n°2</h3> 
+          <h4>16/11/2023</h4>
+          
+        </div>
+      </div><!-- col-lg-3 -->
 
+      <div class="col-lg-9">
+        <div class="row mt-3">
+
+      <!-- Articles scientifiques -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+              <h5 class="text-primary text-gradient">La réunion</h5>
+              <p>
+                 Le 16 novembre 2023 s'est tenu le deuxième Atelier public "Diagnostic / actions", qui réunissait des citoyens, des élus et des chercheurs du projet SonoRezé.
+                 <br>
+                 Comme décidé à l'issue du 1er atelier, cette réunion avait pour thème le bruit aérien.
+              </p>
+                 <img src="../../assets/img/actions/2023_11_16_participants.jpg" alt="Participants au deuxième atelier" width="80%">
+              <p>   
+                 <br>
+                 De manière synthétique, cet atelier a suivit la trame suivante : <br>
+                 &nbsp; 1. tour de table et rappel de l'objectif du projet et des attentes de ce 2ème atelier,<br>
+                 &nbsp; 2. état des connaissances en matière de bruit aérien et retour sur l'expérimentation NoiseCapture depuis chez soi,<br>
+                 &nbsp; 3. groupes de travail sur les éléments que les participants aimeraient montrer ou améliorer,<br>
+                 &nbsp; 4. présentation des outils actuellement mobilisables : la modélisation, la mesure et l'enquête,<br>
+                 &nbsp; 5. restitution des groupes de travail,<br>
+                 &nbsp; 6. discussions / débats sur les éléments ainsi collectés.
+                 <br>
+                 <br>
+              
+                 Cet atelier a permis de récolter une riche matière qu'il convient maintenant d'analyser pour voir quelles sont les perspectives possibles en terme d'actions. La <b>prochaine réunion</b>, fixée au <b>12 décembre</b>, permettra de travailler plus concrètement sur ce point.
+                 <br>
+                 <br>
+                 La présentation faite par Arnaud Can à propos de l'état de l'art sur le bruit aérien est accessible <a href="https://github.com/Universite-Gustave-Eiffel/sonoreze/tree/gh-pages/assets/data/actions/ATELIER_2_presentation_2023_11_16.pdf" target="_blank"><b>ICI</b></a>.
+                 <br>
+                 <br>
+                 Pour plus de détail, vous êtes invité à lire le <b>compte-rendu</b> détaillé, disponible ci-dessous.
+              </p>
+              <a href="https://github.com/Universite-Gustave-Eiffel/sonoreze/tree/gh-pages/assets/data/actions/ATELIER_2_CR_2023_11_16.pdf" target="_blank"><img src="../../assets/img/actions/lire_cr_2023_10_12.png" alt="Lire le compte-rendu" width="80%"></a>
+            </div><!-- row -->
+            <br>
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
+
+        </div> <!-- row mt-3 -->
+      </div><!-- col-lg-9 -->
+    </div><!-- row -->
+  </div><!-- container -->
 
 </section>
 
