Replace nuisance by bruit

--- a/resultats/sonoreze_II/actions.html
+++ b/resultats/sonoreze_II/actions.html
@@ -357,7 +357,7 @@
                  <br>
                  <br>
               
-                 Au terme de cet atelier, les participants ont collégialement acté le fait que la première action devant être travaillée dans le cadre de ce projet devrait concerner les nuisances sonores liées au trafic aérien. 
+                 Au terme de cet atelier, les participants ont collégialement acté le fait que la première action devant être travaillée dans le cadre de ce projet devrait concerner le bruit lié au trafic aérien. 
                  <br>
                  Il a également été convenu que d'autres thématiques (comme le bruit du périphérique, ...) seront traitées ultérieurement.
                  <br>
