Update actu and notions

--- a/actu.html
+++ b/actu.html
@@ -264,7 +264,7 @@
               </h4>
               Ces réunions, qui ont pour but d'échanger avec les citoyens sur leurs attentes et sur les pistes d'actions à mettre en place, se tiendront à la <b><a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a></b> :
               <ul>
-                <li><b>Mardi 12 décembre (18h30-20h30)</b> : 3ème atelier, consacré au bruit aérien</li>
+                <li>... à venir</li>
               </ul>
 
             </div>
@@ -298,7 +298,7 @@
               </h4>
               Pour vous aider à installer et / ou calibrer l'application NoiseCapture, des permances se tiendront à la <b><a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a></b> aux dates suivantes :
               <ul>
-                <li>... à venir</li>
+                <li><b>Lundi 18 décembre, 14h-17h</b></li>
               </ul>
 
             </div>
@@ -333,6 +333,7 @@
                 Ateliers / réunions
               </h4>
               <ul>
+                <li>12/12/23 : 3ème atelier, consacré au bruit aérien</li> 
                 <li>16/11/23 : 2ème atelier, consacré au bruit aérien</li> 
                 <li>12/10/23 : 1er atelier, consacré aux choix des thématiques d'actions</li>
                 <li>16/05/23 : réunion de lancement du projet</li>
