--- a/pedagogie/notions.html
+++ b/pedagogie/notions.html
@@ -370,6 +370,17 @@
                 <img src="../assets/img/notions/dB.png" alt="Additionner ou multiplier des dB" width="70%">
                 </div>
 
+                <br>
+                <p>
+                  De manière plus générale, sur la base de la progression logarithmique des dB, on peut en déduire le graphique ci-dessous, qui montre la relation entre la multiplication d'une source sonore et la différence d'intensité engendrée (en dB).
+                </p>
+
+                <div align="center">            
+                <img src="../assets/img/notions/dB_intensity_scale.png" alt="Additionner ou multiplier des dB" width="70%">
+                </div>
+                <br>
+                <br>
+                
                 <h5 class="text-primary text-gradient">Seuils d'audibilité</h5>
                 <p>
                 Comme évoqué juste avant, l'oreille humaine est capable de distinguer des pressions acoustiques allant de 20 micropascals à 20 pascals. Converties en décibels, ces pressions correspondent à des niveaux sonores allant de 0dB à 120dB. Au-delà de ce seuil, le son va engendrer des dégâts irréversibles pour l'ouïe.
