--- a/actu.html
+++ b/actu.html
@@ -153,14 +153,14 @@
 
         <!-- li Résultats -->
         <li class="nav-item dropdown dropdown-hover mx-2">
-          <a class="nav-link ps-2 d-flex center-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
             Résultats
             <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
           </a>
-          <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
+          <ul class="dropdown-menu dropdown-menu-animation dropdown-mg p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
 
             <!-- Navbar big size (full screen) -->
-            <div class="d-none d-lg-block" >
+            <div class="d-none d-lg-block">
               <h6>&nbsp; &nbsp; SonoRezé I</h6>
               <a href="./resultats/sonoreze_I/discussion.html" class="dropdown-item border-radius-md">Groupes de discussion</a>
               <a href="./resultats/sonoreze_I/cartes.html" class="dropdown-item border-radius-md">Cartographies</a>
@@ -171,9 +171,21 @@
               <a href="./resultats/sonoreze_II/actions.html" class="dropdown-item border-radius-md">Actions</a>
               <a href="./resultats/sonoreze_II/portail_carto.html" class="dropdown-item border-radius-md">Portail cartographique</a>
 
-              <a href="./resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
+              <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                <a class="dropdown-item py-2 ps-3 border-radius-md">
+                  <div class="d-flex">
+                        Cartes sensibles
+                  </div>
+                </a>
+                <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="./resultats/sonoreze_II/cartes_etudiants.html">Étudiants</a>
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="./resultats/sonoreze_II/cartes_ecoliers.html">Écoliers</a>
+                </div>
+              </li>
 
-            </div><!-- navbar big - d-lg-block -->
+              <a href="./resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
+            </div>
+
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
@@ -186,12 +198,13 @@
               <br><h6>&nbsp; &nbsp; SonoRezé II</h6>
               <a href="./resultats/sonoreze_II/actions.html" class="dropdown-item border-radius-md">Actions</a>
               <a href="./resultats/sonoreze_II/portail_carto.html" class="dropdown-item border-radius-md">Portail cartographique</a>
-
+              <a href="./resultats/sonoreze_II/cartes_etudiants.html" class="dropdown-item border-radius-md">Cartes sensibles - Étudiants</a>
+              <a href="./resultats/sonoreze_II/cartes_ecoliers.html" class="dropdown-item border-radius-md">Cartes sensibles - Écoliers</a>
               <a href="./resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
 
             </div><!-- navbar small - d-lg-none -->
 
-          </div><!-- dropdown-menu -->
+          </ul>
         </li><!-- li Résultats -->
 
 
@@ -264,7 +277,9 @@
               </h4>
               Ces réunions, qui ont pour but d'échanger avec les citoyens sur leurs attentes et sur les pistes d'actions à mettre en place, se tiendront à la <b><a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a></b> :
               <ul>
-                <li>... à venir</li>
+                <li>Jeudi 01 février, 18h30-20h30</li>
+                <li>Jeudi 14 mars, 18h30-20h30</li>
+                <li>Mardi 16 avril, 18h30-20h30</li>
               </ul>
 
             </div>
@@ -296,9 +311,10 @@
               <h4>
                 Installation / Calibrage
               </h4>
-              Pour vous aider à installer et / ou calibrer l'application NoiseCapture, des permances se tiendront à la <b><a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a></b> aux dates suivantes :
+              Pour vous aider à installer et / ou calibrer l'application NoiseCapture, des permances se tiendront aux dates suivantes :
               <ul>
-                <li><b>Lundi 18 décembre, 14h-17h</b></li>
+                <li>Samedi 10 février, 10h-12h30, à la Médiathèque Diderot</li>
+                <li>Mercredi 21 février, 15h-17h, à la Médiathèque Diderot</li>
               </ul>
 
             </div>
@@ -372,6 +388,7 @@
                 Installation / Calibrage
               </h4>
               <ul>
+                <li>18/12/23 (14h-17h)</li>
                 <li>06/11/23 (15h-17h)</li> 
                 <li>07/11/23 (14h-16h)</li>
               </ul>
