Update perceptive maps

--- a/resultats/sonoreze_II/cartes_etudiants.html
+++ b/resultats/sonoreze_II/cartes_etudiants.html
@@ -511,6 +511,8 @@
                 <a href="../../assets/img/cartes_etudiants/Elodie_Eme_small.jpg" target="_blank" alt="HTML tutorial"><img src="../../assets/img/cartes_etudiants/Elodie_Eme_small.jpg" title="Cliquez pour agrandir l'image" width="100%"></a>
                 <br><br>
                 Carte des sons de Port-au-Blé : à la recherche des sons naturels dans un nuage mécanique
+                <br><br>
+                <i>"Je me suis inspirée des sons écoutés à travers un regard adulte mais retranscrits sous un angle plus imagé. L’objectif est de montrer que les subtilités sonores complexes du quartier de Port-au-Blé nous permettent de nous rendre compte qu’au sein d’un environnement urbain bruyant et chaotique, il est toujours possible de découvrir des sonorités plaisantes nous ramenant à la nature."</i>
               </p>
             </div><!-- row -->
             
