--- a/actu.html
+++ b/actu.html
@@ -277,7 +277,6 @@
               </h4>
               Ces réunions, qui ont pour but d'échanger avec les citoyens sur leurs attentes et sur les pistes d'actions à mettre en place, se tiendront à la <b><a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a></b> :
               <ul>
-                <li>Jeudi 01 février, 18h30-20h30</li>
                 <li>Jeudi 14 mars, 18h30-20h30</li>
                 <li>Mardi 16 avril, 18h30-20h30</li>
               </ul>
@@ -313,7 +312,6 @@
               </h4>
               Pour vous aider à installer et / ou calibrer l'application NoiseCapture, des permances se tiendront aux dates suivantes :
               <ul>
-                <li>Samedi 10 février, 10h-12h30, à la Médiathèque Diderot</li>
                 <li>Mercredi 21 février, 15h-17h, à la Médiathèque Diderot</li>
               </ul>
 
@@ -349,6 +347,7 @@
                 Ateliers / réunions
               </h4>
               <ul>
+                <li>01/02/24 : 4ème atelier, consacré au bruit aérien</li>
                 <li>12/12/23 : 3ème atelier, consacré au bruit aérien</li> 
                 <li>16/11/23 : 2ème atelier, consacré au bruit aérien</li> 
                 <li>12/10/23 : 1er atelier, consacré aux choix des thématiques d'actions</li>
@@ -388,6 +387,7 @@
                 Installation / Calibrage
               </h4>
               <ul>
+                <li>10/02/24 (10h-13h)</li>
                 <li>18/12/23 (14h-17h)</li>
                 <li>06/11/23 (15h-17h)</li> 
                 <li>07/11/23 (14h-16h)</li>
