Update with atelier 5

--- a/projet/equipe.html
+++ b/projet/equipe.html
@@ -445,7 +445,7 @@
               </div>
               <div class="col-lg-8 col-md-6 col-12 ps-lg-0 my-auto">
                 <div class="card-body">
-                  <h5 class="mb-0">Natalia Oscar Otin</h5>
+                  <h5 class="mb-0">Natalia Escar Otin</h5>
                   <h6 class="text-info">Chercheuse en projet de paysage</h6>
                   <p class="mb-0">UMR 6590 <a href="http://eso.cnrs.fr/eso.cnrs.fr/fr/index.html" target="_blank">ESO</a> ("Espaces et SOciétés") - Institut Agro campus d'Angers</p>
                 </div>
