--- a/resultats/sonoreze_II/actions.html
+++ b/resultats/sonoreze_II/actions.html
@@ -274,7 +274,59 @@
     </div><!-- row -->
   </div><!-- container -->
 
-  <!-- Container Atelier n°3 -->
+  <!-- Container Atelier n°5 -->
+  <div class="container mt-sm-5 mt-3">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
+          <h3>Atelier n°5</h3> 
+          <h4>14/03/2024</h4>
+          
+        </div>
+      </div><!-- col-lg-3 -->
+
+      <div class="col-lg-9">
+        <div class="row mt-3">
+
+      <!-- Description -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+              <h5 class="text-primary text-gradient">La réunion</h5>
+              <p>
+                 Le 13 mars 2024 s'est tenu le cinquième Atelier public "Diagnostic / actions", qui réunissait des une dizaine de citoyens, des élus et des chercheurs du projet SonoRezé.
+                 <br>
+                 Comme décidé à l'issue du 4ème atelier, cette réunion avait pour objectif de présenter l'état d'avancement sur les actions à mettre en oeuvre.
+              </p>
+                 <img src="../../assets/img/actions/2024_03_14_participant.jpg" alt="Participants au cinquième atelier" width="80%">
+              <p>   
+                 <br>
+                 De manière synthétique, l’atelier a suivi la trame suivante : <br>
+                 &nbsp; 1. Une présentation de l’avancement du travail sur la carte des perceptions du bruit (notamment aérien), sur la base de l'analyse des 6 entretiens individuels (sur 20 entretiens réalisés par <a href="../../projet/equipe.html">Natalia Escar Otin</a>);<br><br>
+                 Temps collectif de travail sur la base des premiers résultats concernant :<br><br>
+                 &nbsp; 2. L'action “Variabilité des avions” : des premiers résultats sont présentés, particulièrement via des graphiques et des cartes; <br><br>
+                 &nbsp; 3. L'action “Production de chiffres chocs”: l'équipe des chercheurs présente des premiers indicateurs, issus de la littérature scientifique et s'appuyant sur les données à disposition.
+                 <br><br>
+                 Temps d’échange sur le devenir des résultats :<br><br>
+                 &nbsp; 4. Le partage de ces premiers résultats occasionne une discussion collective sur les modalités de communication de ces éléments : à qui doit-on les diffuser, comment, avec quel message, ... ?<br><br>
+                 &nbsp; 5. Une discussion porte sur le séminaire intermédiaire, probablement courant juin 2024, qui insistera sur la présentation de l’action “bruit des avions”.
+
+              </p>                 
+                 
+            </div><!-- row -->
+            <br>
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
+
+        </div> <!-- row mt-3 -->
+      </div><!-- col-lg-9 -->
+    </div><!-- row -->
+  </div><!-- container -->
+
+  <!-- Container Atelier n°4 -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
@@ -288,7 +340,7 @@
       <div class="col-lg-9">
         <div class="row mt-3">
 
-      <!-- Articles scientifiques -->
+      <!-- Description -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
@@ -321,7 +373,6 @@
     </div><!-- row -->
   </div><!-- container -->
 
-
   <!-- Container Atelier n°3 -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
@@ -336,7 +387,7 @@
       <div class="col-lg-9">
         <div class="row mt-3">
 
-      <!-- Articles scientifiques -->
+      <!-- Description -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
@@ -391,7 +442,7 @@
       <div class="col-lg-9">
         <div class="row mt-3">
 
-      <!-- Articles scientifiques -->
+      <!-- Description -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
@@ -451,7 +502,7 @@
       <div class="col-lg-9">
         <div class="row mt-3">
 
-      <!-- Articles scientifiques -->
+      <!-- Description -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
