Update with atelier 5

--- a/resultats/sonoreze_II/actions.html
+++ b/resultats/sonoreze_II/actions.html
@@ -306,7 +306,7 @@
                  &nbsp; 1. Une présentation de l’avancement du travail sur la carte des perceptions du bruit (notamment aérien), sur la base de l'analyse des 6 entretiens individuels (sur 20 entretiens réalisés par <a href="../../projet/equipe.html">Natalia Escar Otin</a>);<br><br>
                  Temps collectif de travail sur la base des premiers résultats concernant :<br><br>
                  &nbsp; 2. L'action “Variabilité des avions” : des premiers résultats sont présentés, particulièrement via des graphiques et des cartes; <br><br>
-                 &nbsp; 3. L'action “Production de chiffres chocs”: l'équipe des chercheurs présente des premiers indicateurs, issus de la littérature scientifique et s'appuyant sur les données à disposition.
+                 &nbsp; 3. L'action “Chiffres de sensibilisation au bruit des avions”: l'équipe des chercheurs présente des premiers indicateurs, issus de la littérature scientifique et s'appuyant sur les données à disposition.
                  <br><br>
                  Temps d’échange sur le devenir des résultats :<br><br>
                  &nbsp; 4. Le partage de ces premiers résultats occasionne une discussion collective sur les modalités de communication de ces éléments : à qui doit-on les diffuser, comment, avec quel message, ... ?<br><br>
